syntax = "proto3";

package url_shortener;

service UrlShortenerService {
    rpc CreateShortURL(CreateShortURLRequest) returns (CreateShortURLResponse) {};
    rpc GetDestinationURLFromShortURL(GetDestinationURLFromShortURLRequest) returns (GetDestinationURLFromShortURLResponse) {};
}

message ShortUrlDTO {
    string destinationURL = 1;
    string shortURL = 2;
    string createdAt = 3;
}

message CreateShortURLRequest {
    string destinationURL = 1;
}

message CreateShortURLResponse {
    ShortUrlDTO URL = 1;
}

message GetDestinationURLFromShortURLRequest {
    string shortURL = 1;
}

message GetDestinationURLFromShortURLResponse {
    string destinationURL = 1;
}